--- a/W2 Practical 2 starter code/index.html
+++ b/W2 Practical 2 starter code/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" >
         <title>York University Press</title>
+        <link rel="stylesheet" href="mainpage.css">
         <!--Link your stylesheet here-->
     </head>
     <body>
